Change App background and fix so header and main image always align

--- a/src/components/main/App.css
+++ b/src/components/main/App.css
@@ -3,26 +3,25 @@
 }
 .App-header {
   background-color: white;
+  clip-path: inset(0);
   display: grid;
   grid-template: 
     "name navbar"
     / min-content 1fr ;
   position: fixed;
-  padding: 15px 0px 0px 0px;
+  padding: 15px 0px 1px 0px;
   width: 100%;
   z-index: 3;
 }
 .App-header::before {
-  background-image: url("../../assets/images/background.webp");
+  background-image: url("../../assets/images/dark_background.jpg");
   background-repeat: no-repeat;
   background-size: cover; 
   content: "";
-  height: 61px; width: 100%;
-  opacity: 0.7;
-  padding: 15px 0px 0px 0px;
+  height: 100%; width: 100%;
+  padding: 0px 0px 0px 0px;
   position: fixed;
   top: 0px;
-  z-index: 4;
 }
 .App-name {
   grid-area: name;
@@ -36,12 +35,12 @@
   height: 100vh; width: 100vw; 
 }
 .App-screen::before {
-  background-image: url("../../assets/images/background.webp");
+  background-image: url("../../assets/images/dark_background.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   content: "";
-  height: 100%; width: 100%;
-  opacity: 0.7;
+  height: 100%; 
+  width: 100%;
   position: fixed;
   z-index: 0;
 }
